// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup Page The signup page renders  1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="cardColumn"
    >
      <div
        class="card"
      >
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--margin-bottom-xxxlarge"
          >
            <svg
              enable-background="new 0 0 141 30"
              height="25"
              viewBox="0 0 141 30"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m28.4 9.8-7.5-7.5c-.1-.1-1.3-1.3-3.1-1.9-2.6-.9-5.1-.2-7.2 1.9l-7.6 7.5c-.1.1-1.3 1.3-1.9 3.1-.9 2.6-.2 5.1 1.9 7.2l7.5 7.5c.1.1 1.3 1.3 3.1 1.9.7.2 1.5.4 2.2.4 1.8 0 3.5-.8 5-2.2l7.5-7.5c.1-.1 1.3-1.3 1.9-3.1.9-2.6.2-5.2-1.8-7.3m-12.1-5.3c.8.3 1.5.8 1.5.9l2.2 2.2-4.3 4.3-4.3-4.3 2.2-2.2c.6-.6 1.4-1.3 2.7-.9m-11.1 9.9c.3-.8.8-1.5.9-1.5l2.2-2.2 4.3 4.3-4.3 4.3-2.3-2.2c-.6-.6-1.2-1.5-.8-2.7m9.9 11.1c-.8-.3-1.5-.8-1.5-.9l-2.2-2.2 4.3-4.3 4.3 4.3-2.2 2.2c-.6.6-1.5 1.2-2.7.9m11.1-9.9c-.3.8-.8 1.5-.9 1.5l-2.2 2.2-4.4-4.3 4.3-4.3 2.2 2.2c.7.6 1.3 1.4 1 2.7"
                fill="#00ade4"
              />
              <path
                d="m44.6 25.6h3.9v-10.8c0-3.3-2-5.8-5.5-5.8-1.7 0-3.5.7-4.4 2.1v-8h-3.9v22.4h3.9v-8.5c0-2 1-4.5 3.3-4.5 2.1 0 2.7 1.2 2.7 3zm15.7-6.4c0 2.4-1.7 3.7-4.1 3.7-1.2 0-2.3-.8-2.3-2 0-1.3 1.1-2 2.3-2.1l4.1-.3zm3.2 6.6c.9 0 1.3-.2 1.9-.4v-2.8s-.2.1-.5.1c-.6 0-.9-.3-.9-1v-6c0-1.1-.1-2.2-.5-3.2-.9-2.4-3.3-3.3-6-3.3-3.6 0-6.4 1.6-6.7 5.2h3.7c.1-1.5 1.1-2.3 2.9-2.3 2.2 0 2.7 1 2.7 2.5v1l-4.7.3c-3.1.2-5.4 2-5.4 5 0 2.6 2 5 5.8 5 2.3 0 4.1-1.1 4.9-2.4.2 1.3 1.2 2.3 2.8 2.3m12.1-12.8h.6v-3.6c-.2 0-.3 0-.5 0-1.9 0-3.8.8-4.5 2.6l-.3-2.4h-3.3v16h3.9v-8.1c0-2.6 1.4-4.5 4.1-4.5m12.2 12.6h3.9v-10.7c0-3.3-2-5.7-5.4-5.7-1.9 0-3.8.8-4.7 2.5l-.3-2.1h-3.3v16h3.9v-6.5c0-1.4 0-3 .5-4.3.5-1.2 1.4-2 2.8-2 2 0 2.7 1.1 2.7 3zm16.5-9.6h-6.9c0-1 .3-1.8.8-2.5.6-.7 1.5-1.2 2.7-1.2 1.1 0 1.9.4 2.4.9.6.6 1 1.6 1 2.8m3.9 1.7c.1-2-.2-3.8-1.4-5.6-1.3-2-3.5-3-5.9-3-2.2 0-3.9.8-5.1 2-1.5 1.6-2.3 3.9-2.3 6.4 0 2.6.9 4.9 2.5 6.4 1.3 1.2 2.9 2 5.1 2 2 0 4-.6 5.4-2.3.6-.7 1.3-2 1.4-3h-3.7c-.2.6-.4 1-.8 1.4-.6.6-1.2.8-2.3.8-1 0-1.8-.5-2.4-1-.8-.7-1.2-1.9-1.2-3.1h10.7c-.1-.3 0-1 0-1m5.1-3.7c0-.8.6-1.4 1.2-1.7.6-.2 1.1-.2 1.7-.2.8 0 1.6.3 2.1.7.4.4.6.9.6 1.5h3.7c0-1.2-.6-2.4-1.4-3.3-1.2-1.3-3.1-1.9-5-1.9-2 0-3.7.6-4.9 1.6-1 .8-1.6 2-1.6 3.6 0 2 1.5 3.8 3.7 4.3 1.4.3 3 .4 4.4.6 1 .2 1.6.8 1.6 1.7 0 1.8-2 2-3.3 2-1.1 0-1.8-.2-2.4-.7-.4-.3-.7-.9-.8-1.5h-3.6c.1 1.3.8 2.5 1.7 3.3 1.3 1.3 3.1 1.9 5.2 1.9 2.2 0 4.2-.6 5.5-1.9.8-.8 1.4-2 1.4-3.5 0-2.5-1.8-4.1-4.4-4.5-1.6-.2-2-.3-3.4-.5-1 0-2-.3-2-1.5m20.5.3h3.7c0-1.2-.6-2.4-1.4-3.3-1.2-1.3-3.1-1.9-5-1.9-2 0-3.7.6-4.9 1.6-1 .8-1.6 2-1.6 3.6 0 2 1.5 3.8 3.7 4.3 1.4.3 3 .4 4.4.6 1 .2 1.6.8 1.6 1.7 0 1.8-2 2-3.3 2-1.1 0-1.8-.2-2.4-.7-.4-.3-.7-.9-.8-1.5h-3.6c.1 1.3.8 2.5 1.7 3.3 1.3 1.3 3.1 1.9 5.2 1.9 2.2 0 4.2-.6 5.5-1.9.8-.8 1.4-2 1.4-3.5 0-2.5-1.8-4.1-4.4-4.5-1.6-.2-2-.3-3.4-.5-.9-.1-1.9-.5-1.9-1.6 0-.8.6-1.4 1.2-1.7.6-.2 1.1-.2 1.7-.2.8 0 1.6.3 2.1.7.2.5.5 1 .5 1.6"
                fill="#060000"
              />
            </svg>
            <a
              href="/login"
            >
              <span
                class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--color StyledProps--color-blue500 StyledProps--margin-right-xsmall"
                icon="arrow-left"
              >
                <svg
                  data-icon="arrow-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    arrow-left
                  </desc>
                  <path
                    d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue500 StyledProps--inline StyledProps--font-size-medium"
              >
                signUp.signIn
              </span>
            </a>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
          >
            signUp.message.primary
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black StyledProps--margin-top-xsmall"
          >
            signUp.message.secondary
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-top-xxxlarge"
          >
            <div
              class="OverlaySpinner--overlaySpinner"
            >
              <form
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="bp3-form-group"
                    data-id="email-0"
                  >
                    <label
                      class="bp3-label"
                      for="email"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="signupPageForm_email"
                      >
                        signUp.form.emailLabel
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="email"
                          placeholder="signUp.form.emailPlaceholder"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="password-1"
                  >
                    <label
                      class="bp3-label"
                      for="password"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="signupPageForm_password"
                      >
                        password
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="password"
                          placeholder="signUp.form.passwordPlaceholder"
                          type="password"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                    style="width: 100%;"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      signUp.signUp
                    </span>
                  </button>
                </div>
              </form>
            </div>
          </div>
          <h2
            class="lineMessage"
          >
            <span
              class="message"
            >
              signUp.oAuth.signup
            </span>
          </h2>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-large"
          >
            <div
              class="oAuthIcons"
            >
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=github"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="github"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.385-1.335-1.755-1.335-1.755-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57 4.801-1.574 8.236-6.074 8.236-11.369 0-6.627-5.373-12-12-12"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=bitbucket"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="bitbucket-blue"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 22"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m.78.00021505c-.43-.01-.77.32999995-.78.75999995 0 .04 0 .09.01.13l3.26 19.809985c.08.5.52.87 1.02.87h15.66c.38 0 .71-.27.77-.65l3.27-20.019985c.07-.42-.22-.81-.64-.88-.05-.01-.09-.01-.13-.01zm13.74 14.31998495h-5l-1.35-7.06999h7.56z"
                      fill="#0357d1"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=gitlab"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-gotlab"
                >
                  <svg
                    enable-background="new 0 0 14 13"
                    height="24"
                    viewBox="0 0 14 13"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7 12.9 2.6-7.9h-5.2z"
                      fill="#e24329"
                    />
                    <path
                      d="m7 12.9-2.6-7.9h-3.6z"
                      fill="#fc6d26"
                    />
                    <path
                      d="m.8 5-.8 2.4c0 .2 0 .5.2.6l6.8 4.9z"
                      fill="#fca326"
                    />
                    <path
                      d="m.8 5h3.6l-1.5-4.8c-.1-.2-.5-.2-.5 0z"
                      fill="#e24329"
                    />
                    <path
                      d="m7 12.9 2.6-7.9h3.6z"
                      fill="#fc6d26"
                    />
                    <path
                      d="m13.2 5 .8 2.4c0 .2 0 .5-.2.6l-6.8 4.9z"
                      fill="#fca326"
                    />
                    <path
                      d="m13.2 5h-3.6l1.6-4.8c.1-.2.4-.2.5 0z"
                      fill="#e24329"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=linkedin"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="linkedin"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m20.45 20.45h-3.55v-5.57c0-1.33-.03-3.04-1.85-3.04-1.85 0-2.14 1.44-2.14 2.94v5.67h-3.56v-11.45h3.41v1.56h.05c.48-.9 1.64-1.85 3.37-1.85 3.6 0 4.27 2.37 4.27 5.45zm-15.11-13.02c-1.14 0-2.06-.93-2.06-2.07s.92-2.06 2.06-2.06 2.06.92 2.06 2.06c0 1.15-.92 2.07-2.06 2.07zm1.78 13.02h-3.56v-11.45h3.56zm15.11-20.45h-20.46c-.98 0-1.77.77-1.77 1.73v20.54c0 .96.79 1.73 1.77 1.73h20.45c.98 0 1.78-.77 1.78-1.73v-20.54c0-.96-.8-1.73-1.77-1.73z"
                      fill="#0072b1"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=google"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="google"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 25"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m24 12.5239c0-.8322-.0674-1.6689-.2114-2.4875h-11.5468v4.7141h6.6123c-.2744 1.5203-1.156 2.8653-2.447 3.7199v3.0588h3.9449c2.3166-2.1321 3.648-5.2808 3.648-9.0053z"
                      fill="#4285f4"
                    />
                    <path
                      d="m12.2418 24.4844c3.3017 0 6.086-1.0841 8.1147-2.9553l-3.9449-3.0588c-1.0975.7467-2.5145 1.1695-4.1653 1.1695-3.1937 0-5.9016-2.1546-6.87321-5.0514h-4.07084v3.1532c2.07815 4.1338 6.31093 6.7428 10.93955 6.7428z"
                      fill="#34a853"
                    />
                    <path
                      d="m5.36857 14.5884c-.51279-1.5204-.51279-3.1668 0-4.68713v-3.15322h-4.06635c-1.736294 3.45905-1.736294 7.53445 0 10.99355z"
                      fill="#fbbc04"
                    />
                    <path
                      d="m12.2418 4.84536c1.7453-.02699 3.4321.62974 4.6961 1.83525l3.4951-3.49508c-2.2131-2.07815-5.1504-3.2206904-8.1912-3.18470504-4.62862 0-8.8614 2.60893504-10.93955 6.74725504l4.06634 3.15322c.96711-2.90132 3.67951-5.05594 6.87321-5.05594z"
                      fill="#ea4335"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=azure"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-azure"
                >
                  <svg
                    enable-background="new 0 0 14 12"
                    height="24"
                    viewBox="0 0 14 12"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#2075b7"
                    >
                      <path
                        d="m14 11.3c-3.5 0-7 0-10.5 0 2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1 1.9 3.4 3.8 6.7 5.8 10.1z"
                      />
                      <path
                        d="m7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1-1 0-1.9 0-2.9 0-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3 1.3-1 2.6-2.1 3.9-3.2 0 0 0-.1.1-.1z"
                      />
                    </g>
                  </svg>
                </span>
              </a>
            </div>
            <div
              class="disclaimer"
            >
              signUp.disclaimer.initial
              <a
                class="externalLink"
                href="https://harness.io/privacy/"
                rel="noreferrer"
                target="_blank"
              >
                signUp.disclaimer.privacyPolicy
              </a>
              signUp.disclaimer.middle
              <a
                class="externalLink"
                href="https://harness.io/subscriptionterms/"
                rel="noreferrer"
                target="_blank"
              >
                signUp.disclaimer.terms
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="imageColumn"
    >
      <img
        alt=""
        aria-hidden="true"
        class="image"
        src="test-file-stub"
      />
    </div>
  </div>
</div>
`;

exports[`Signup Page handleSubmit should show error when api fails 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="cardColumn"
    >
      <div
        class="card"
      >
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--margin-bottom-xxxlarge"
          >
            <svg
              enable-background="new 0 0 141 30"
              height="25"
              viewBox="0 0 141 30"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m28.4 9.8-7.5-7.5c-.1-.1-1.3-1.3-3.1-1.9-2.6-.9-5.1-.2-7.2 1.9l-7.6 7.5c-.1.1-1.3 1.3-1.9 3.1-.9 2.6-.2 5.1 1.9 7.2l7.5 7.5c.1.1 1.3 1.3 3.1 1.9.7.2 1.5.4 2.2.4 1.8 0 3.5-.8 5-2.2l7.5-7.5c.1-.1 1.3-1.3 1.9-3.1.9-2.6.2-5.2-1.8-7.3m-12.1-5.3c.8.3 1.5.8 1.5.9l2.2 2.2-4.3 4.3-4.3-4.3 2.2-2.2c.6-.6 1.4-1.3 2.7-.9m-11.1 9.9c.3-.8.8-1.5.9-1.5l2.2-2.2 4.3 4.3-4.3 4.3-2.3-2.2c-.6-.6-1.2-1.5-.8-2.7m9.9 11.1c-.8-.3-1.5-.8-1.5-.9l-2.2-2.2 4.3-4.3 4.3 4.3-2.2 2.2c-.6.6-1.5 1.2-2.7.9m11.1-9.9c-.3.8-.8 1.5-.9 1.5l-2.2 2.2-4.4-4.3 4.3-4.3 2.2 2.2c.7.6 1.3 1.4 1 2.7"
                fill="#00ade4"
              />
              <path
                d="m44.6 25.6h3.9v-10.8c0-3.3-2-5.8-5.5-5.8-1.7 0-3.5.7-4.4 2.1v-8h-3.9v22.4h3.9v-8.5c0-2 1-4.5 3.3-4.5 2.1 0 2.7 1.2 2.7 3zm15.7-6.4c0 2.4-1.7 3.7-4.1 3.7-1.2 0-2.3-.8-2.3-2 0-1.3 1.1-2 2.3-2.1l4.1-.3zm3.2 6.6c.9 0 1.3-.2 1.9-.4v-2.8s-.2.1-.5.1c-.6 0-.9-.3-.9-1v-6c0-1.1-.1-2.2-.5-3.2-.9-2.4-3.3-3.3-6-3.3-3.6 0-6.4 1.6-6.7 5.2h3.7c.1-1.5 1.1-2.3 2.9-2.3 2.2 0 2.7 1 2.7 2.5v1l-4.7.3c-3.1.2-5.4 2-5.4 5 0 2.6 2 5 5.8 5 2.3 0 4.1-1.1 4.9-2.4.2 1.3 1.2 2.3 2.8 2.3m12.1-12.8h.6v-3.6c-.2 0-.3 0-.5 0-1.9 0-3.8.8-4.5 2.6l-.3-2.4h-3.3v16h3.9v-8.1c0-2.6 1.4-4.5 4.1-4.5m12.2 12.6h3.9v-10.7c0-3.3-2-5.7-5.4-5.7-1.9 0-3.8.8-4.7 2.5l-.3-2.1h-3.3v16h3.9v-6.5c0-1.4 0-3 .5-4.3.5-1.2 1.4-2 2.8-2 2 0 2.7 1.1 2.7 3zm16.5-9.6h-6.9c0-1 .3-1.8.8-2.5.6-.7 1.5-1.2 2.7-1.2 1.1 0 1.9.4 2.4.9.6.6 1 1.6 1 2.8m3.9 1.7c.1-2-.2-3.8-1.4-5.6-1.3-2-3.5-3-5.9-3-2.2 0-3.9.8-5.1 2-1.5 1.6-2.3 3.9-2.3 6.4 0 2.6.9 4.9 2.5 6.4 1.3 1.2 2.9 2 5.1 2 2 0 4-.6 5.4-2.3.6-.7 1.3-2 1.4-3h-3.7c-.2.6-.4 1-.8 1.4-.6.6-1.2.8-2.3.8-1 0-1.8-.5-2.4-1-.8-.7-1.2-1.9-1.2-3.1h10.7c-.1-.3 0-1 0-1m5.1-3.7c0-.8.6-1.4 1.2-1.7.6-.2 1.1-.2 1.7-.2.8 0 1.6.3 2.1.7.4.4.6.9.6 1.5h3.7c0-1.2-.6-2.4-1.4-3.3-1.2-1.3-3.1-1.9-5-1.9-2 0-3.7.6-4.9 1.6-1 .8-1.6 2-1.6 3.6 0 2 1.5 3.8 3.7 4.3 1.4.3 3 .4 4.4.6 1 .2 1.6.8 1.6 1.7 0 1.8-2 2-3.3 2-1.1 0-1.8-.2-2.4-.7-.4-.3-.7-.9-.8-1.5h-3.6c.1 1.3.8 2.5 1.7 3.3 1.3 1.3 3.1 1.9 5.2 1.9 2.2 0 4.2-.6 5.5-1.9.8-.8 1.4-2 1.4-3.5 0-2.5-1.8-4.1-4.4-4.5-1.6-.2-2-.3-3.4-.5-1 0-2-.3-2-1.5m20.5.3h3.7c0-1.2-.6-2.4-1.4-3.3-1.2-1.3-3.1-1.9-5-1.9-2 0-3.7.6-4.9 1.6-1 .8-1.6 2-1.6 3.6 0 2 1.5 3.8 3.7 4.3 1.4.3 3 .4 4.4.6 1 .2 1.6.8 1.6 1.7 0 1.8-2 2-3.3 2-1.1 0-1.8-.2-2.4-.7-.4-.3-.7-.9-.8-1.5h-3.6c.1 1.3.8 2.5 1.7 3.3 1.3 1.3 3.1 1.9 5.2 1.9 2.2 0 4.2-.6 5.5-1.9.8-.8 1.4-2 1.4-3.5 0-2.5-1.8-4.1-4.4-4.5-1.6-.2-2-.3-3.4-.5-.9-.1-1.9-.5-1.9-1.6 0-.8.6-1.4 1.2-1.7.6-.2 1.1-.2 1.7-.2.8 0 1.6.3 2.1.7.2.5.5 1 .5 1.6"
                fill="#060000"
              />
            </svg>
            <a
              href="/login"
            >
              <span
                class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--color StyledProps--color-blue500 StyledProps--margin-right-xsmall"
                icon="arrow-left"
              >
                <svg
                  data-icon="arrow-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    arrow-left
                  </desc>
                  <path
                    d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue500 StyledProps--inline StyledProps--font-size-medium"
              >
                signUp.signIn
              </span>
            </a>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
          >
            signUp.message.primary
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black StyledProps--margin-top-xsmall"
          >
            signUp.message.secondary
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-top-xxxlarge"
          >
            <div
              class="OverlaySpinner--overlaySpinner"
            >
              <form
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="bp3-form-group"
                    data-id="email-0"
                  >
                    <label
                      class="bp3-label"
                      for="email"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="signupPageForm_email"
                      >
                        signUp.form.emailLabel
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="email"
                          placeholder="signUp.form.emailPlaceholder"
                          type="text"
                          value="random@hotmail.com"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="password-1"
                  >
                    <label
                      class="bp3-label"
                      for="password"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="signupPageForm_password"
                      >
                        password
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="password"
                          placeholder="signUp.form.passwordPlaceholder"
                          type="password"
                          value="12345678"
                        />
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                    style="width: 100%;"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      signUp.signUp
                    </span>
                  </button>
                </div>
              </form>
            </div>
          </div>
          <h2
            class="lineMessage"
          >
            <span
              class="message"
            >
              signUp.oAuth.signup
            </span>
          </h2>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-large"
          >
            <div
              class="oAuthIcons"
            >
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=github"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="github"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.385-1.335-1.755-1.335-1.755-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57 4.801-1.574 8.236-6.074 8.236-11.369 0-6.627-5.373-12-12-12"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=bitbucket"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="bitbucket-blue"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 22"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m.78.00021505c-.43-.01-.77.32999995-.78.75999995 0 .04 0 .09.01.13l3.26 19.809985c.08.5.52.87 1.02.87h15.66c.38 0 .71-.27.77-.65l3.27-20.019985c.07-.42-.22-.81-.64-.88-.05-.01-.09-.01-.13-.01zm13.74 14.31998495h-5l-1.35-7.06999h7.56z"
                      fill="#0357d1"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=gitlab"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-gotlab"
                >
                  <svg
                    enable-background="new 0 0 14 13"
                    height="24"
                    viewBox="0 0 14 13"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7 12.9 2.6-7.9h-5.2z"
                      fill="#e24329"
                    />
                    <path
                      d="m7 12.9-2.6-7.9h-3.6z"
                      fill="#fc6d26"
                    />
                    <path
                      d="m.8 5-.8 2.4c0 .2 0 .5.2.6l6.8 4.9z"
                      fill="#fca326"
                    />
                    <path
                      d="m.8 5h3.6l-1.5-4.8c-.1-.2-.5-.2-.5 0z"
                      fill="#e24329"
                    />
                    <path
                      d="m7 12.9 2.6-7.9h3.6z"
                      fill="#fc6d26"
                    />
                    <path
                      d="m13.2 5 .8 2.4c0 .2 0 .5-.2.6l-6.8 4.9z"
                      fill="#fca326"
                    />
                    <path
                      d="m13.2 5h-3.6l1.6-4.8c.1-.2.4-.2.5 0z"
                      fill="#e24329"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=linkedin"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="linkedin"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m20.45 20.45h-3.55v-5.57c0-1.33-.03-3.04-1.85-3.04-1.85 0-2.14 1.44-2.14 2.94v5.67h-3.56v-11.45h3.41v1.56h.05c.48-.9 1.64-1.85 3.37-1.85 3.6 0 4.27 2.37 4.27 5.45zm-15.11-13.02c-1.14 0-2.06-.93-2.06-2.07s.92-2.06 2.06-2.06 2.06.92 2.06 2.06c0 1.15-.92 2.07-2.06 2.07zm1.78 13.02h-3.56v-11.45h3.56zm15.11-20.45h-20.46c-.98 0-1.77.77-1.77 1.73v20.54c0 .96.79 1.73 1.77 1.73h20.45c.98 0 1.78-.77 1.78-1.73v-20.54c0-.96-.8-1.73-1.77-1.73z"
                      fill="#0072b1"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=google"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="google"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 25"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m24 12.5239c0-.8322-.0674-1.6689-.2114-2.4875h-11.5468v4.7141h6.6123c-.2744 1.5203-1.156 2.8653-2.447 3.7199v3.0588h3.9449c2.3166-2.1321 3.648-5.2808 3.648-9.0053z"
                      fill="#4285f4"
                    />
                    <path
                      d="m12.2418 24.4844c3.3017 0 6.086-1.0841 8.1147-2.9553l-3.9449-3.0588c-1.0975.7467-2.5145 1.1695-4.1653 1.1695-3.1937 0-5.9016-2.1546-6.87321-5.0514h-4.07084v3.1532c2.07815 4.1338 6.31093 6.7428 10.93955 6.7428z"
                      fill="#34a853"
                    />
                    <path
                      d="m5.36857 14.5884c-.51279-1.5204-.51279-3.1668 0-4.68713v-3.15322h-4.06635c-1.736294 3.45905-1.736294 7.53445 0 10.99355z"
                      fill="#fbbc04"
                    />
                    <path
                      d="m12.2418 4.84536c1.7453-.02699 3.4321.62974 4.6961 1.83525l3.4951-3.49508c-2.2131-2.07815-5.1504-3.2206904-8.1912-3.18470504-4.62862 0-8.8614 2.60893504-10.93955 6.74725504l4.06634 3.15322c.96711-2.90132 3.67951-5.05594 6.87321-5.05594z"
                      fill="#ea4335"
                    />
                  </svg>
                </span>
              </a>
              <a
                class="iconContainer"
                href="https://app.harness.io/gateway/api/users/oauth2Redirect?provider=azure"
                rel="noreferrer"
                target="_blank"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-azure"
                >
                  <svg
                    enable-background="new 0 0 14 12"
                    height="24"
                    viewBox="0 0 14 12"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#2075b7"
                    >
                      <path
                        d="m14 11.3c-3.5 0-7 0-10.5 0 2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1 1.9 3.4 3.8 6.7 5.8 10.1z"
                      />
                      <path
                        d="m7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1-1 0-1.9 0-2.9 0-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3 1.3-1 2.6-2.1 3.9-3.2 0 0 0-.1.1-.1z"
                      />
                    </g>
                  </svg>
                </span>
              </a>
            </div>
            <div
              class="disclaimer"
            >
              signUp.disclaimer.initial
              <a
                class="externalLink"
                href="https://harness.io/privacy/"
                rel="noreferrer"
                target="_blank"
              >
                signUp.disclaimer.privacyPolicy
              </a>
              signUp.disclaimer.middle
              <a
                class="externalLink"
                href="https://harness.io/subscriptionterms/"
                rel="noreferrer"
                target="_blank"
              >
                signUp.disclaimer.terms
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="imageColumn"
    >
      <img
        alt=""
        aria-hidden="true"
        class="image"
        src="test-file-stub"
      />
    </div>
  </div>
</div>
`;
